--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div id="react-app">Loading &hellip;</div>
+    <script src="http://localhost:8080/javascripts/build.js"></script>
   </body>
 </html>
