--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="react-app">Loading &hellip;</div>
-    <script src="http://localhost:8080/public/javascripts/build.js"></script>
+    <script src="/javascripts/build.js"></script>
   </body>
 </html>
